--- a/app/assets/stylesheets/dashboard/_dashboard.scss
+++ b/app/assets/stylesheets/dashboard/_dashboard.scss
@@ -9,59 +9,137 @@
   justify-content: flex-end;
 }
 
-.hosting, .attending {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 15px;
-  p {
-    margin: 0px;
-    text-decoration: none;
-  }
-}
+// .hosting, .attending {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   margin-right: 15px;
+//   p {
+//     margin: 0px;
+//     text-decoration: none;
+//   }
+// }
 
-.pending, {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  p {
-    margin: 0px;
-    text-decoration: none;
-  }
-}
+// .pending, {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   p {
+//     margin: 0px;
+//     text-decoration: none;
+//   }
+// }
 
-.host-circle {
-  width: 16px;
-  height: 16px;
-  border-radius: 8px;
+// .host-circle {
+//   width: 16px;
+//   height: 16px;
+//   border-radius: 8px;
+//   background-color: $violet;
+//   border-color: black;
+//   border: solid;
+//   border-width: 1px;
+//   margin-right: 4px;
+// }
+
+// .guest-circle {
+//   width: 16px;
+//   height: 16px;
+//   border-radius: 8px;
+//   background-color: $green;
+//   border-color: black;
+//   border: solid;
+//   border-width: 1px;
+//   margin-right: 4px;
+// }
+
+// .invitation-circle {
+//   width: 16px;
+//   height: 16px;
+//   border-radius: 8px;
+//   background-color: $magenta;
+//   border-color: black;
+//   border: solid;
+//   border-width: 1px;
+//   margin-right: 4px;
+// }
+
+// buttons ----------------
+
+.host-button {
+  width: 100px;
+  height: 30px;
+  border-radius: 2px;
   background-color: $violet;
   border-color: black;
   border: solid;
-  border-width: 1px;
+  border-width: 2px;
   margin-right: 4px;
+  display: table;
+  margin-bottom: 4px;
+  p {
+    color: white;
+    text-align: center;
+    vertical-align: middle;
+    display: table-cell;
+  }
 }
 
-.guest-circle {
-  width: 16px;
-  height: 16px;
-  border-radius: 8px;
+.guest-button {
+  width: 100px;
+  height: 30px;
+  border-radius: 2px;
   background-color: $green;
   border-color: black;
   border: solid;
-  border-width: 1px;
+  border-width: 2px;
   margin-right: 4px;
+  display: table;
+  margin-bottom: 4px;
+  p {
+    color: white;
+    text-align: center;
+    vertical-align: middle;
+    display: table-cell;
+  }
 }
 
-.invitation-circle {
-  width: 16px;
-  height: 16px;
-  border-radius: 8px;
+.invitation-button {
+  width: 100px;
+  height: 30px;
+  border-radius: 2px;
   background-color: $magenta;
   border-color: black;
   border: solid;
-  border-width: 1px;
-  margin-right: 4px;
+  border-width: 2px;
+  display: table;
+  margin-bottom: 4px;
+  p {
+    color: white;
+    text-align: center;
+    vertical-align: middle;
+    display: table-cell;
+  }
 }
+
+.host-button:hover {
+  font-weight: bold;
+  font-size: 16px;
+  background-color: black;
+}
+
+.guest-button:hover {
+  font-weight: bold;
+  font-size: 16px;
+  background-color: black;
+}
+
+.invitation-button:hover {
+  font-weight: bold;
+  font-size: 16px;
+  background-color: black;
+}
+
+// buttons ----------------
 
 
 .dashboard-container {
@@ -86,12 +164,13 @@
 
 .event-card-section {
   display: flex;
-  justify-content: start;
+  justify-content: space-around;
   background-color: $beige;
   margin-bottom: 40px;
   padding: 40px 30px 10px 30px;
   flex-wrap: wrap;
   position: relative;
+  border-radius: 4px;
 }
 
 .event-card {
@@ -100,7 +179,6 @@
   background-color: white;
   margin-top: 20px;
   margin-bottom: 40px;
-  margin-right: 10px;
   width: 200px;
 }
 
@@ -177,6 +255,7 @@
   p {
     margin: 0px;
     color: white;
+    margin: 0px;
   }
 }
 
@@ -189,7 +268,6 @@
     font-size: 25px;
   }
   i:hover {
-    // color: $magenta;
     font-size: 30px;
   }
 }
