--- a/app/views/shared/_home_navbar.html.erb
+++ b/app/views/shared/_home_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar-home ">
+<div class="navbar-hostit navbar-home">
   <div class="nav-line">
     <%= link_to root_path, class: "navbar-brand" do %>
       <%= image_tag "logo_host.it.svg", class:"tilt" %>
