--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,9 +3,11 @@
     <div class="event-banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @event.banner.key %>')"> 
   </div>
   <% else %>
+    <% if @event.user == current_user || current_user.admin? %>
     <div class="event-banner">
       <%= link_to "Add banner", edit_event_path(@event), class: "button-create upload-button" %>
     </div>
+    <% end %>
   <% end %>
 
   <div class="event-details">
