--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -5,7 +5,7 @@
   padding: 0 5% 80px;
 
   .event-details {
-    width: 100%;
+    width: 75%;
     margin: 80px;
     background-color: $beige;
     padding: 48px;
@@ -41,7 +41,7 @@
   .event-guest-map {
     background-color: $beige;
     padding: 48px;
-    width: 100%;
+    width: 75%;
     display: flex;
     margin-bottom: 80px;
 
@@ -52,8 +52,8 @@
       flex-direction: column;
       .guest-cards {
         background-color: $white;
-        height: 500px;
-        width: 400px;
+        height: 400px;
+        width: 300px;
         // temporary
         color: $black;
         display: flex;
@@ -64,7 +64,7 @@
     }
 
     .guest-name {
-      margin: 42px;
+      margin: 12px 42px;
       align-self: center;
       font-size: 1.5rem;
       color: $white;
@@ -217,7 +217,7 @@
   .event-items-playlist {
     background-color: $beige;
     padding: 48px;
-    width: 100%;
+    width: 75%;
     display: flex;
     margin-bottom: 80px;
 
@@ -285,7 +285,7 @@
   .event-chat {
     background-color: $beige;
     padding: 48px;
-    width: 100%;
+    width: 75%;
     display: flex;
     flex-direction: column;
 
@@ -333,8 +333,8 @@
 }
 
 .event-banner {
-  width: 100%;
-  height: 70vh;
+  width: 75%;
+  height: 60vh;
   background-size: cover;
   background-color: gray;
   display: flex;
