--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -10,18 +10,51 @@
     background-color: $beige;
     padding: 48px;
     position: relative;
+    display: flex;
 
-    #event-title {
-      font-size: 3rem;
+    .event-info {
+      width: 80%;
+
+      #event-title {
+        font-size: 3rem;
+      }
+  
+      #event-time-location {
+        font-size: 1rem;
+        color: rgba(0, 0, 0, 0.4);
+      }
+  
+      #event-description {
+        font-size: 1.5rem;
+      }
     }
 
-    #event-time-location {
-      font-size: 1rem;
-      color: rgba(0, 0, 0, 0.4);
-    }
+    .event-host {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
-    #event-description {
-      font-size: 1.5rem;
+      .host-title {
+        font-size: 3rem;
+      }
+    
+      .host-avatar {
+        width: 250px;
+        height: 320px;
+        background-color: $white;
+        border: solid 1.5px black;
+        background-size: cover;
+        margin-bottom: 24px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 8rem;
+      }
+
+      .host-name {
+        font-size: 1.5rem;
+        width: fit-content;
+      }
     }
 
     #event-edit-delete {
