--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -11,7 +11,8 @@
   <% end %>
 
   <div class="event-details">
-    <% if @event.user == current_user || current_user.admin? %>
+    <div class="event-info">
+      <% if @event.user == current_user || current_user.admin? %>
       <div id="event-edit-delete">
         <%= link_to edit_event_path(@event), title: "Edit event", id: "event-edit" do %>
           <i class="fas fa-edit"></i>
@@ -24,6 +25,18 @@
     <h1 id="event-title"><%= @event.title %></h1>
     <p id="event-time-location"><i class="fas fa-map-marker-alt"></i> <%= @event.location %> <i class="fas fa-clock"></i> <%= @event.scheduled_at.strftime("%d %b %Y") %> at <%= @event.scheduled_at.strftime("%H:%M %p") %></p>
     <p id="event-description"><%= @event.description %></p>
+    </div>
+    <div class="event-host">
+      <h1 class="host-title event-title">Your Host</h1>
+      <% if @event.user.avatar.attached? %>
+        <div class="host-avatar" style="background-image: url('<%= cl_image_path @event.user.avatar.key %>')"></div>
+      <% else %>
+        <div class="host-avatar">?</div>
+      <% end %>
+      <div class="host-info">
+        <div class="host-name"><%= @event.user.first_name %> <%= @event.user.last_name %></div>
+      </div>
+    </div>
   </div>
 
   <div class="event-guest-map">
