profile and event show page changes

--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -68,6 +68,7 @@
 
     div.guest-cards img {
       position: absolute;
+      object-fit: cover;
       top: 0;
       left: 0;
       height: 500px;
