--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -1,10 +1,3 @@
-#profile-title {
-  text-align: left;
-}
-
-
-
-
 .avatar-square {
     border-radius: 2px;
     box-shadow: 0 1px 2px rgba(0,0,0,0.2);
@@ -91,9 +84,9 @@ p:hover #socials-fb, #socials-in, #socials-sp, #socials-ln, #socials-tw { transi
   }
 
   #no-picture {
-    max-height: 70vh;
+    height: 500px;
+    width: 350px;;
     border-radius: 2px;
-    width: 30vw;
     display: flex;
     background-color: white;
     justify-content: center;
