--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,5 @@
-<%= @user.first_name %>
-
 <div id="edit-page">
-  <h1>Edit offer</h1>
+  <h1>Edit Your Profile</h1>
   <%= simple_form_for @user do |f| %>
     <%= f.input :first_name %>
     <%= f.input :last_name %>
@@ -9,6 +7,6 @@
     <%= f.input :phone_number %>
     <%= f.input :avatar, as: :file, label: "Add a profile picture", class: 'button-main'%>
      <%= f.button :submit, 'Save changes', data: { confirm: "Confrim changes?" },class: 'button-main'%>
- 
+
   <% end %>
 </div>
