--- a/app/assets/stylesheets/dashboard/_dashboard.scss
+++ b/app/assets/stylesheets/dashboard/_dashboard.scss
@@ -70,6 +70,7 @@
 
 .date-box {
   background-color: black;
+  border-radius: 2px;
   color: white;
   height: 30px;
   text-align: center;
@@ -96,6 +97,7 @@
 
 .event-card {
   border-color: black;
+  border-radius: 2px;
   border: solid;
   background-color: white;
   margin-top: 20px;
