--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <%= @user.first_name %>
 
 <div id="edit-page">
-  <h1>Edit offer</h1>
+  <h1>Edit Profile</h1>
   <%= simple_form_for @user do |f| %>
     <%= f.input :first_name %>
     <%= f.input :last_name %>
