--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,7 +1,9 @@
 <div class="dashboard-container">
+
   <div class="headline">
     <h1>My Events</h1>
   </div>
+
   <% if @created_ats.empty? %>
     <div class="no-events">
       <div class="no-events-message">
@@ -10,18 +12,24 @@
         <%= link_to "Create", new_event_path, class: "button-create-home" %>
       </div>
     </div>
+
   <% else %>
       <div class="legend">
         <div class="host-button"><p>Hosting</p></div>
         <div class="guest-button"><p>Attending</p></div>
         <div class="invitation-button"><p>Pending</p></div>
       </div>
+
     <% @created_ats.each do |day| %>
+
       <div class="event-card-section">
         <div class="date-box"> <%= day[0].strftime("%A, %b %d") %> </div>
         <% day[1].each do |day_event| %>
+
+
           <div class="event-card">
-            <div class="event-card-header"><div class="event-card-header-title"><p><%= link_to "#{day_event.title}", event_path(day_event.id), class: 'link-to-text' %></p></div>
+
+            <div class="event-card-header"><p><%= link_to "#{day_event.title}", event_path(day_event.id), class: 'link-to-text' %></p>
               <% if day_event.user == current_user %>
                 <div class="event-card-status-circle-host"></div>
               <% elsif @invitations_data.include?([day_event.id, "accepted"]) %>
@@ -30,38 +38,42 @@
                 <div class="event-card-status-circle-invitation"></div>
               <% end %>
             </div>
+
             <% if day_event.banner.attached? %>
               <div class="event-card-body" style="background-image: url('<%= cl_image_path day_event.banner.key %>')">
             <% else %>
               <div class="event-card-body" style="background-image: url(https://images.unsplash.com/photo-1605478328994-f93e98217da7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDV8fHBhdHRlcm4lMjBkYXJrfGVufDB8fDB8&auto=format&fit=crop&w=800&q=60)">
             <% end %>
-            <% if day_event.user == current_user %>
-              <div class="overlay-host">
-            <% elsif @invitations_data.include?([day_event.id, "accepted"]) %>
-              <div class="overlay-guest">
-            <% elsif @invitations_data.include?([day_event.id, "pending"]) %>
-              <div class="overlay-invitation">
+
+              <% if day_event.user == current_user %>
+                <div class="overlay-host">
+              <% elsif @invitations_data.include?([day_event.id, "accepted"]) %>
+                <div class="overlay-guest">
+              <% elsif @invitations_data.include?([day_event.id, "pending"]) %>
+                <div class="overlay-invitation">
               <% end %>
-              <p><i class="far fa-clock"></i> <strong><%= day_event.scheduled_at.strftime("%l:%M %p") %></strong></p>
-              <p><i class="fas fa-map-marker-alt"></i> <strong><%= day_event.location %></strong></p>
-            </div>
-              <% if @invitations_data.include?([day_event.id, "pending"]) %>
-                <div class="event-card-footer-symbols">
-                  <%= link_to(invitation_path(day_event.invitations.where(receiver_id: current_user.id).first, status: "accepted"), method: :patch) do %>
-                    <i class="fas fa-check-circle"></i>
-                  <% end %>
-                  <%= link_to(invitation_path(day_event.invitations.where(receiver_id: current_user.id).first, status: "declined"), method: :patch) do  %>
-                    <i class="fas fa-times-circle"></i>
-                  <% end %>
-                </div>
-              <% end %>
+                <p><i class="far fa-clock"></i> <strong><%= day_event.scheduled_at.strftime("%l:%M %p") %></strong></p>
+                <p><i class="fas fa-map-marker-alt"></i> <strong><%= day_event.location %></strong></p>
+              </div>
+            <% if @invitations_data.include?([day_event.id, "pending"]) %>
+              <div class="event-card-footer-symbols">
+                <%= link_to(invitation_path(day_event.invitations.where(receiver_id: current_user.id).first, status: "accepted"), method: :patch) do %>
+                  <i class="fas fa-check-circle"></i>
+                <% end %>
+                <%= link_to(invitation_path(day_event.invitations.where(receiver_id: current_user.id).first, status: "declined"), method: :patch) do  %>
+                  <i class="fas fa-times-circle"></i>
+                <% end %>
+              </div>
+            <% end %>
             </div>
           </div>
-        </div>
+
+
+
       <% end %>
+      </div>
     <% end %>
   <% end %>
 </div>
-
 
 
