fixed guests able to send and delete invites. Modal close button fixed

--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -244,6 +244,7 @@
         position: absolute;
         top: 8px;
         right: 8px;
+        outline: 0;
         i {
           font-size: 1.5rem;
         }
