fixed home page animation scroll and border

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -80,7 +80,8 @@ div#content iframe {
     position: absolute;
     width:50%; 
     height:50%; 
-    float:right
+    float: right;
+    border: none;
 }
 
  div.launch-form {
