--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
 
 <div style="background-color:#E8DDB5; width:50%; height:50%; float:right">
     <div id="content">
-        <%= content_tag(:iframe,'', src: "https://random-placement-26.superhi.com/") %>
+        <%= content_tag(:iframe,'', src: "https://random-placement-26.superhi.com/", scrolling: "no") %>
     </div>
 </div>
 
