--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,16 +13,16 @@
 
 <div id="button-area" style="background-color:#FFFDF7; width:50%; height:50%; float:left">
     <div id="header-buttons">
-        <a href="#learnmore" class="button-main">Learn More</a> 
-        <a href="#launch" class="button-main">Launch</a>
+        <%= link_to "Learn More", "#learnmore", class: "button-main" %>
+        <%= link_to "Launch", "#launch", class: "button-main" %>
     </div>
 </div>
 
 <div id="banner" style="background-color: #DD1155; width:50%; height:50%; float:right">
 </div>
 
-<section id="learnmore">
-    <div class="container">
+<section>
+    <div class="container" id="learnmore">
         <div class="column">
             <%= image_tag "homepage-image-1.jpg" , class: "tilt" %>
         </div>
