--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -35,7 +35,7 @@
         <div class="host-avatar">?</div>
       <% end %>
       <div class="host-info">
-        <div class="host-name"><%= @event.user.first_name %> <%= @event.user.last_name %></div>
+        <div class="host-name"><%= link_to "#{@event.user.first_name} #{@event.user.last_name}", user_path(@event.user) %></div>
       </div>
     </div>
   </div>
