--- a/app/assets/stylesheets/events/_edit.scss
+++ b/app/assets/stylesheets/events/_edit.scss
@@ -23,10 +23,12 @@
     margin: 80px 0;
     flex-direction: column;
     align-items: center;
+    border-radius: 2px;
 
     .form-control {
       border-radius: 0;
       border: 1.5px solid black;
+      border-radius: 2px;
     }
 
     .form-group {
