--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -42,6 +42,7 @@
 
   <div class="event-guest-map">
     <div class="guest-list">
+      <div class="guest-list-header">The Guests</div>
       <div class="guest-cards">
         <%= image_tag "photo1.jpg"%>
         <%= image_tag "photo2.jpg"%>
@@ -52,7 +53,7 @@
     </div>
     
     <div id="map"
-      style="width: 100%; height: 600px;"
+      <%# style="width: 100%; height: 600px;" %>
       data-markers="<%= @marker.to_json %>"
       data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"]%>">
     </div>
