--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -145,6 +145,14 @@
       border-radius: 2px;
     }
 
+    .mapboxgl-canvas-container {
+      &:focus {
+        outline: 0;
+      }
+      width: 100%;
+      height: 100%;
+    }
+
     .list-button {
       width: fit-content;
       align-self: center;
