fixed styling of event description. Smaller size, padding right and line breaks

--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -26,7 +26,10 @@
       }
 
       #event-description {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
+        padding-right: 48px;
+        text-align: justify;
+        white-space: pre-wrap;
       }
     }
 
