--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -112,13 +112,51 @@
         border-radius: 2px;
         height: 400px;
         width: 300px;
-        position: relative;
         // temporary
         color: $black;
         display: flex;
         justify-content: center;
         align-items: center;
         font-size: 2rem;
+      }
+
+      .slider-area {
+        position: relative;
+        background-color: $white;
+        border-radius: 2px;
+        height: 400px;
+        width: 300px;
+        // temporary
+        color: $black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 2rem;
+        margin-bottom: 56px;
+
+        .slide {
+          position: absolute;
+          object-fit: cover;
+          top: 0;
+          left: 0;
+          border-radius: 2px;
+          .guest-name {
+            margin: 12px 0;
+            align-self: center;
+            text-align: center;
+            font-size: 1.5rem;
+            color: #fffdf7;
+            background-color: black;
+            a {
+              color: $white;
+              &:hover {
+                text-decoration: none;
+                color: $magenta;
+                border-bottom: 1.5px solid;
+              }
+            }
+          }
+        }
       }
     }
 
@@ -130,13 +168,6 @@
       height: 400px;
       width: 300px;
       border-radius: 2px;
-    }
-
-    .guest-name {
-      margin: 12px 42px;
-      align-self: center;
-      font-size: 1.5rem;
-      color: $white;
     }
 
     #map {
@@ -273,7 +304,8 @@
           border-radius: 2px;
           border: solid 1.5px;
 
-          .receiver-avatar, .receiver-no-avatar {
+          .receiver-avatar,
+          .receiver-no-avatar {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -295,7 +327,6 @@
               color: $magenta;
             }
           }
-
 
           .invitee-info {
             font-size: 1.2rem;
