--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -35,7 +35,7 @@
         <div class="host-avatar">?</div>
       <% end %>
       <div class="host-info">
-        <div class="host-name"><%= link_to "#{@event.user.first_name} #{@event.user.last_name}", user_path(@event.user) %></div>
+        <div class="host-name"><%= link_to @event.user.full_name, user_path(@event.user) %></div>
       </div>
     </div>
   </div>
@@ -43,17 +43,30 @@
   <div class="event-guest-map">
     <div class="guest-list">
       <div class="guest-list-header">The Guests</div>
-      <div class="guest-cards">
-        <%= image_tag "photo1.jpg"%>
-        <%= image_tag "photo2.jpg"%>
-        <%= image_tag "photo3.jpg"%>
+      <div class="slider-area">
+        <% @event.invitations.each do |invitation| %>
+          <% if invitation.receiver && (invitation.status == "pending" || invitation.status == "accepted") %>
+            <div class="slide">
+              <div class="guest-cards">
+                  <% if invitation.receiver.avatar.attached? %>
+                    <%= cl_image_tag invitation.receiver.avatar.key %>
+                  <% else %>
+                    <%= image_tag "placeholder-avatar.png"%>
+                  <% end %>
+              </div>
+              <% if invitation.receiver && invitation.receiver.full_name %>
+                <div class="guest-name"><%= link_to invitation.receiver.full_name, user_path(invitation.receiver) %></div>
+              <% elsif invitation.receiver && !invitation.receiver.full_name %>
+                <div class="guest-name"><%= link_to "Nemo", user_path(invitation.receiver) %></div>
+              <% end %>
+            </div>
+           <% end %>
+        <% end %>
       </div>
-      <div class="guest-name">Guest name</div>
       <a href="" class="list-button button-invite">See list</a>
     </div>
     
     <div id="map"
-      <%# style="width: 100%; height: 600px;" %>
       data-markers="<%= @marker.to_json %>"
       data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"]%>">
     </div>
