--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -189,6 +189,9 @@
     .list-button {
       width: fit-content;
       align-self: center;
+      font-weight: 400;
+      padding: 8px 16px;
+      
       &:hover {
         background-color: $white;
         color: $black;
