--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -102,7 +102,8 @@
 
       .guest-list-header {
         align-self: center;
-        font-size: 1.5rem;
+        font-size: 2rem;
+        font-weight: 600;
         color: $white;
         padding: 6px 0;
       }
@@ -191,7 +192,7 @@
       align-self: center;
       font-weight: 400;
       padding: 8px 16px;
-      
+
       &:hover {
         background-color: $white;
         color: $black;
